# CrossOver

./: Readme.txt
Source/client/: CMakeLists.txt
Source/client/cmakes/: FindGTesttmp.cmake  FindLibraries.cmake  FindProjectFiles.cmake  FindSigar.cmake  FindZeroMQPP.cmake
Source/client/includes/: Request.h  SigarWrapper.h
Source/client/sources/: Request.cpp  SigarWrapper.cpp  main.cpp
Source/client/sources/models/: metric_update.pb.cc
Source/client/tests/: SigarWrapperTest.cpp  example.cpp
Source/common/: metric_update.proto
Source/server/: CMakeLists.txt  docker-compose.yml
Source/server/cmakes/: FindCurlLib.cmake  FindLibraries.cmake  FindMySqlConn.cmake  FindProto.cmake  FindZeroMQ.cmake  FindZeroMQPP.cmake
Source/server/dockerfiles/: mysql  server
Source/server/documents/: class.diagram  er.diagram
Source/server/includes/: AWorker.h  AlertWorker.h  DataWorker.h  IRunnable.h  Server.h
Source/server/includes/models/: Alert.h  Client.h  IXmlModel.h  metric_update.pb.h
Source/server/resources/: clients.xml  init.sql
Source/server/resources/mail-server/: postfix-accounts.cf
Source/server/resources/mail-server/opendkim/: KeyTable  SigningTable  TrustedHosts
Source/server/resources/mail-server/opendkim/keys/cross.com/: mail.private  mail.txt
Source/server/sources/: AWorker.cpp  AlertWorker.cpp  DataWorker.cpp  Server.cpp  main.cpp
Source/server/sources/models/: Alert.cpp  Client.cpp
Source/server/tests/: AlertWorkerTest.cpp
